--- a/server/package.json
+++ b/server/package.json
@@ -18,12 +18,12 @@
     "prettier": "^2.8.3"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.9.0",
     "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1",
-    "mongoose": "^6.9.0"
+    "passport-jwt": "^4.0.1"
   }
 }
