--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon node ./src/index.js"
+    "start" : "nodemon node ./src/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,13 +17,7 @@
     "prettier": "^2.8.3"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.9.0",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0"
+    "express": "^4.18.2"
   }
 }
